--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Modak&display=swap");
+
 $teal: #03a5b6;
 $teal-secondary: #04d3eaf4;
 $yellow: #ffcf00;
@@ -162,12 +164,13 @@ h3{
 
 h1 {
 
-    text-shadow: 2px 2px 2px $yellow;
+    text-shadow: 1px 1px 1px $yellow;
     color: $orange;
     font-size: 80px;
     font-style: italic;
     text-align: center;
     rotate: -6deg;
+    font-family: modak;
 }
 
 
@@ -755,3 +758,17 @@ label{
     }
 }
 
+.service-description{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+    border: 3px double $orange;
+    padding: 10px;
+    background-color: $teal;
+    border-radius: 5px;
+    h2{
+        color: $orange;
+        font-family: modak;
+    }
+}
